fix bottom margin on safari mobile

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h2 {
     flex-wrap: wrap;
     width: 80%;
     margin-left: 5%;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .bios div {
@@ -120,10 +120,6 @@ footer {
 }
 
 @media only screen and (max-width: 650px) {
-    _::-webkit-full-page-media, _:future, :root .safari_only {
-        padding-bottom: 65px;
-    }
-
     #hamburger-menu {
         width: 50px;
         height: 30px;
